#
# Copyright (C) 2002 - 2018 Brailcom, o.p.s.
#
# This is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

## Process this file with automake to produce Makefile.in

nobase_localedata_DATA = \
	en/font-variants.dic \
	an/symbols.dic \
	ar/symbols.dic \
	ar/emojis.dic \
	bg/symbols.dic \
	bg/emojis.dic \
	ca/symbols.dic \
	ca/emojis.dic \
	cs/symbols.dic \
	cs/emojis.dic \
	da/symbols.dic \
	da/emojis.dic \
	de/symbols.dic \
	de/emojis.dic \
	el/symbols.dic \
	el/emojis.dic \
	en/symbols.dic \
	en/emojis.dic \
	es/symbols.dic \
	es/emojis.dic \
	es_CO/symbols.dic \
	fa/symbols.dic \
	fa/emojis.dic \
	fi/symbols.dic \
	fi/emojis.dic \
	fr/symbols.dic \
	fr/emojis.dic \
	ga/symbols.dic \
	ga/emojis.dic \
	gl/symbols.dic \
	gl/emojis.dic \
	he/symbols.dic \
	he/emojis.dic \
	hi/symbols.dic \
	hi/emojis.dic \
	hr/symbols.dic \
	hr/emojis.dic \
	hu/symbols.dic \
	hu/emojis.dic \
	is/symbols.dic \
	is/emojis.dic \
	it/symbols.dic \
	it/emojis.dic \
	ja/symbols.dic \
	ja/emojis.dic \
	ka/symbols.dic \
	ka/emojis.dic \
	kn/symbols.dic \
	kn/emojis.dic \
	ko/symbols.dic \
	ko/emojis.dic \
	lt/symbols.dic \
	lt/emojis.dic \
	my/symbols.dic \
	my/emojis.dic \
	nb_NO/symbols.dic \
	nb_NO/emojis.dic \
	nl/symbols.dic \
	nl/emojis.dic \
	nn_NO/symbols.dic \
	nn_NO/emojis.dic \
	pa/symbols.dic \
	pa/emojis.dic \
	pl/symbols.dic \
	pl/emojis.dic \
	pt_BR/symbols.dic \
	pt_BR/emojis.dic \
	pt_PT/symbols.dic \
	pt_PT/emojis.dic \
	ro/symbols.dic \
	ro/emojis.dic \
	ru/symbols.dic \
	ru/emojis.dic \
	sk/symbols.dic \
	sk/emojis.dic \
	sl/symbols.dic \
	sl/emojis.dic \
	sq/symbols.dic \
	sq/emojis.dic \
	sr/symbols.dic \
	sr/emojis.dic \
	sv/symbols.dic \
	sv/emojis.dic \
	ta/symbols.dic \
	ta/emojis.dic \
	tr/symbols.dic \
	tr/emojis.dic \
	uk/symbols.dic \
	uk/emojis.dic \
	vi/symbols.dic \
	vi/emojis.dic \
	zh/symbols.dic \
	zh/emojis.dic \
	zh_CN/symbols.dic \
	zh_CN/emojis.dic \
	zh_HK/symbols.dic \
	zh_HK/emojis.dic \
	zh_TW/symbols.dic \
	zh_TW/emojis.dic

EXTRA_DIST = ${nobase_localedata_DATA}

import-symbols:
	./import-symbols.py

-include $(top_srcdir)/git.mk
