## Process this file with automake to produce Makefile.in

# APIs in languages other than C must be included here
# (either directly listing all files or indirectly
# in SUBDIRS if they contain another Makefile)
# otherwise they won't be included in distribution packages
EXTRA_DIST = cl/ChangeLog cl/README cl/*.lisp cl/*.asd \
guile/ChangeLog guile/Makefile guile/README guile/*.in guile/*.c guile/*.h \
python/*.py

SUBDIRS= server audio c modules tests python


